2005-07-09  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_field_ref): Correctly call
	handle_invocation.

2005-07-09  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.hh (bytecode_generator::handle_invocation):
	Updated.
	* bytecode/generate.cc (handle_invocation): Added 'use_accessor'
	argument.
	(visit_method_invocation): Updated.
	(visit_type_qualified_invocation): Likewise.
	(visit_super_invocation): Likewise.
	(visit_field_ref): Likewise.
	(dereference_left_hand_side): Updated for static accessors.
	(emit_lhs_store): Likewise.
	(visit_field_ref): Likewise.
	* model/class.cc (get_accessor): Always make accessor static.
	(get_accessor): Likewise.

2005-07-08  Colin Walters  <walters@verbum.org>

	* verify.cc (class _Jv_BytecodeVerifier) <op_new>: Don't
	check for abstract classes or interfaces here; JVM spec
	says it should throw an exception, so we'll do so later.

2005-06-24  Tom Tromey  <tromey@redhat.com>

	* bytecode/verify.cc (verify_instructions_0): Correctly handle
	situation where PC falls off end.

2005-05-17  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_method): Updated.
	(visit_return): Use request().
	* bytecode/locals.cc (request(bool)): New method.
	(request(model_variable_decl*)): Use it.
	(request()): New method.
	* bytecode/locals.hh (locals::request): Declare.

2005-05-16  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (visit_return): If there are cleanups, save
	result expression in local variable.

2005-05-16  Tom Tromey  <tromey@redhat.com>

	* defassign.cc (class definite_assignment_visitor): Removed some
	old comments.

2005-05-07  Tom Tromey  <tromey@redhat.com>

	* verify.h (GLOM): Removed.
	(VFY_PRIMITIVE_CLASS): Likewise.

2005-04-30  Tom Tromey  <tromey@redhat.com>

	* aot/aotclass.cc (get_descriptor): New helper function.
	(add): Use it.

2005-04-28  Tom Tromey  <tromey@redhat.com>

	* header/cni.cc (generate): Use aot class' vtable layout.
	(write_include): New method.